--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
+    "@code-hike/mdx": "^0.9.0",
     "@vercel/analytics": "^1.0.1",
     "next": "^13.0.6",
     "nextra": "latest",
